--- a/ViT_B_16x4_KTP_alfred.yaml
+++ b/ViT_B_16x4_KTP_alfred.yaml
@@ -1,8 +1,9 @@
 TRAIN:
   ENABLE: True
   DATASET: ava
-  BATCH_SIZE: 8
-  EVAL_PERIOD: 5
+  BATCH_SIZE: 12
+  EFFECTIVE_BATCH_SIZE: 72
+  EVAL_PERIOD: 1
   CHECKPOINT_PERIOD: 1
   AUTO_RESUME: True
   CHECKPOINT_INFLATE: False
@@ -83,3 +84,4 @@ OUTPUT_DIR: "output/ava_evad_vitb_kpr0.7"
 LOG_PERIOD: 50
 TENSORBOARD:
   ENABLE: True
+EVAL_ONLY: False
